<resources>
    <string name="app_name">ToDoApp</string>
    <string name="txtTop">ToDoリスト</string>
    <string name="txtEntry">登録</string>
    <string name="txtList">一覧</string>
    <string name="btnNew">新規</string>
    <string name="btnList">一覧</string>
    <string name="btnEntry">登録</string>
    <string name="btnToTop">TOP</string>
    <string name="btnDelete">削除</string>
    <string name="txtTitle"> ●</string>
    <string name="txtMemo">メモ</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
</resources>